--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <!-- Metadatos -->
     <meta charset="utf-8">
-    <meta name="author" content="Jane Doe">
-    <meta name="description" content="Portafolio de desarrollo web de Jane Doe">
+    <meta name="author" content="Nonamoes">
+    <meta name="description" content="Portafolio de desarrollo web de Nonamoes">
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Titulo -->
-    <title>Jane Doe | Desarrollo Web Front-End</title>
+    <title>NoNaMoEs</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="imagenes/icono.png">
     <!-- Bootstrap -->
@@ -54,8 +54,8 @@
     <!-- Seccion Hero -->
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/imagenes-desarrolladores/desarrollador-ejemplo.svg" alt="Foto de Jane Doe">
-        <h1>Hola, soy Jane Doe</h1>
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/imagenes-desarrolladores/desarrollador-ejemplo.svg" alt="Foto de Natty">
+        <h1>Hola, soy Natty</h1>
         <h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>
       </div>
       <div class="hero-inferior">
@@ -66,7 +66,7 @@
     <!-- Sobre mi -->
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">Conoce a Jane Doe</h2>
+        <h2 class="seccion-titulo">Conoce a Natty</h2>
         <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. Donec et venenatis nunc, vel hendrerit ex. Vestibulum sapien ipsum, rutrum eget est et, ultricies sagittis urna. In non volutpat est. Vestibulum diam sapien, ultrices et euismod at, ultrices ut odio. Nullam in massa et elit ultrices suscipit. Proin lacinia leo ac posuere placerat.</p>
       </div>
     </section>
