--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!--<img class="hero-imagen-desarrollador rounded-circle" src="imagenes/imagenes-desarrolladores/desarrollador-ejemplo.svg" alt="Foto de Natty">-->
 
         <h1>Hola, soy Natty</h1>
-        <h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>
+        <h2>I’m interested in bunny, tech, learning, education, web developer, languages, networking, kdramas, noodles, anime.  </h2>
       </div>
       <div class="hero-inferior">
         <img class="hero-inferior-imagen img-fluid" src="imagenes/hero-inferior.svg" alt="Monitor, laptop y logos de HTML, CSS, JavaScript y React.">
