--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p class="experiencia-titulo">Estudiante</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
             <div class="badges-contenedor">
-              <span class="badge text-bg-primary">freeCodeCamp</span>
+              <span class="badge text-bg-primary">fdd</span>
               <span class="badge text-bg-primary">Desarrollo Web</span>
               <span class="badge text-bg-primary">Python</span>
             </div>
